4.0.9 (2019-XX-XX)
------------------

New features
 - [core] Debian 10 (Buster) support for x86_64 (#4775)
 - [core] now possible to specify which domains you can forward your mails to
 - [core] added support for S/MIME opaque signing (#4582)

Enhancements
 - [web] avoid saving an empty calendar name
 - [web] prohibit duplicate contact categories in Preferences module
 - [web] improve constrat of text in toolbar with input fields

Bug fixes
 - [web] properly handle Windows-1256 charaset (#4781)
 - [web] fixed saving value of receipt action for main IMAP account
 - [web] fixed search results in Calendar module when targeting all events
 - [core] honor IMAPLoginFieldName also when setting IMAP ACLs

4.0.8 (2019-07-19)
------------------

Enhancements
 - [web] show calendar names of subscriptions in events blocks
 - [web] show hints for mail vacation options (#4462)
 - [web] allow to fetch unseen count of all mailboxes (#522, #2776, #4276)
 - [web] add rel="noopener" to external links (#4764)
 - [web] add Indonesian (id) translation
 - [web] updated Angular Material to version 1.1.19
 - [web] replaced bower packages by npm packages
 - [web] restored mail threads (#3478, #4616, #4735)
 - [web] reflect attendee type with generic icon (person/group/resource)
 - [web] reduce usage of calendar color in dialogs

Bug fixes
 - [web] fixed wrong translation of custom calendar categories
 - [web] fixed wrong colors assigned to default calendar categories
 - [web] lowered size of headings on small screens
 - [web] fixed scrolling in calendars list on Android
 - [web] keep center list of Calendar module visible on small screens
 - [web] check for duplicate name only if address book name is changed
 - [web] improved detection of URLs and email addresses in text mail parts
 - [web] fixed page reload with external IMAP account (#4709)
 - [web] constrained absolute-positioned child elements of HTML mail parts
 - [web] fixed useless scrolling when deleting a message