@@ -181,6 +181,12 @@
         if (!_.find(this.attendees, function(o) {
           return o.email == attendee.email;
         })) {
+          if (card.$isList()) {
+            // LDAP list -- preload members
+            card.$members().then(function(members) {
+              attendee.members = members;
+            });
+          }
           attendee.image = Attendees.$gravatar(attendee.email, 32);
           if (this.component.attendees)
             this.component.attendees.push(attendee);
