@@ -190,6 +190,7 @@ div.md-tile-left {
       min-height: auto;
       min-width: auto;
       padding: 0 3px !important;
+      margin: 0;
       font-weight: $sg-font-medium;
       md-icon {
         font-size: sg-size(body);
